<resources>
    <string name="app_name">WEEK3</string>
    <string name="skip">Skip</string>
    <string name="get_inspired_by_your">Get inspired by your \npersonalised feed</string>
    <string name="str_intro1">Discover places that revolves around your
        \ninterests and social network. Save the ones that
        \ncall out to you strongly and organise them nicely
        \ninto your itineraries at a later time.</string>
    <string name="str_tt_intro2">Travel planning made
        \nseamless and enjoyable</string>
    <string name="str_intro2">String an itinerary from a fellow Stringer and
        \ncontinue to personalise it from there; Add new
        \nplaces that you\'ve discovered and remove those
        \nthat do not appeal to you.</string>
    <string name="str_tt_intro3">Share experiences and be
        \npart of the String community</string>
    <string name="str_intro3">If you benefited from itineraries that you\'ve
        \nstrung, share the love; Contribute and share your
        \npersonal experiences and feedback with fellow
        \nStringers, as you learn from them too. After all,
        \ncommunity is unity!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_the">Discover the Endless
        \nPossibilities of Travel
</string>
    <string name="log_into_your_account">Log into your Account</string>
    <string name="or">Or</string>
    <string name="sign_up_with_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="enter_your_email_ad_ress">Enter your email adđress</string>
    <string name="verify_your_account">Verify your Account</string>
    <string name="forgot">Forgot Password</string>
    <string name="enter_your_email...">Enter your email address below and follow the
        \ninstructions in the email we’ll send you.</string>
    <string name="mail_verify">A verification email has been sent to:</string>
    <string name="Create">Create Account</string>
    <string name="name_mail1">Check your email and click on the verification link
    \nto activate your account.</string>
    <string name="more">%1$d more</string>
    <string name="interest">Select at least 3 tags that represents your \ninterests</string>
    <string name="follow">Add some suggested users from the comunity</string>
    <string name="notification">Be in the know whenever you \nreceive messages, new followers \nand more</string>
    <string name="location">Share your location to help us \nfind the best places near you</string>
</resources>